<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_q7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ari.saidata.q7">

    <TextView
        android:text="7. Ketepatan staf admin dalam memenuhi janji penyelesaian yang diurus misalnya (Mencetak Transkip Nilai)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView1" />


    <Button
        android:text="Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/txt_next" />

    <TextView
        android:text="7. Ketepatan staf admin dalam memenuhi janji penyelesaian yang diurus misalnya (Mencetak Transkip Nilai)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/GropuP7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/rd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_1" />

        <RadioButton
            android:id="@+id/rd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_2" />

        <RadioButton
            android:id="@+id/rd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/rd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_4" />

        <RadioButton
            android:id="@+id/rd5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_5" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/GropuH7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_next"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/rd6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_1" />

        <RadioButton
            android:id="@+id/rd7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_2" />

        <RadioButton
            android:id="@+id/rd8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/rd9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_4" />

        <RadioButton
            android:id="@+id/rd10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio_5" />

    </RadioGroup>

</RelativeLayout>
